--- a/src/com/javiertp/base/mvc/Vista.form
+++ b/src/com/javiertp/base/mvc/Vista.form
@@ -391,7 +391,7 @@
             </children>
           </grid>
           <grid id="48b4b" layout-manager="FormLayout">
-            <rowspec value="center:84px:noGrow"/>
+            <rowspec value="center:50px:noGrow"/>
             <rowspec value="top:7dlu:noGrow"/>
             <rowspec value="center:max(d;4px):noGrow"/>
             <rowspec value="top:4dlu:noGrow"/>
@@ -418,16 +418,16 @@
                     <constraints/>
                     <properties>
                       <actionCommand value=""/>
-                      <preferredSize width="120" height="30"/>
-                      <text value="Informe1"/>
+                      <preferredSize width="200" height="30"/>
+                      <text value="Listado de Naves Espaciales"/>
                     </properties>
                   </component>
                   <component id="3d4ec" class="javax.swing.JButton" binding="informe2btn">
                     <constraints/>
                     <properties>
                       <actionCommand value=""/>
-                      <preferredSize width="120" height="30"/>
-                      <text value="Informe2"/>
+                      <preferredSize width="200" height="30"/>
+                      <text value="Listado de Tripulantes"/>
                     </properties>
                   </component>
                 </children>
@@ -455,16 +455,16 @@
                         <constraints/>
                         <properties>
                           <actionCommand value=""/>
-                          <preferredSize width="120" height="30"/>
-                          <text value="Informe3"/>
+                          <preferredSize width="200" height="30"/>
+                          <text value="Tripulación por Nave"/>
                         </properties>
                       </component>
                       <component id="cc0c5" class="javax.swing.JButton" binding="informe4btn">
                         <constraints/>
                         <properties>
                           <actionCommand value=""/>
-                          <preferredSize width="120" height="30"/>
-                          <text value="Informe4"/>
+                          <preferredSize width="200" height="30"/>
+                          <text value="Misiones por Estado"/>
                         </properties>
                       </component>
                     </children>
@@ -497,16 +497,16 @@
                         <properties>
                           <actionCommand value=""/>
                           <maximumSize width="89" height="30"/>
-                          <preferredSize width="120" height="30"/>
-                          <text value="Informe5"/>
+                          <preferredSize width="200" height="30"/>
+                          <text value="Misiones de una Nave"/>
                         </properties>
                       </component>
                       <component id="61a36" class="javax.swing.JButton" binding="informe6btn">
                         <constraints/>
                         <properties>
                           <actionCommand value=""/>
-                          <preferredSize width="120" height="30"/>
-                          <text value="Informe6"/>
+                          <preferredSize width="200" height="30"/>
+                          <text value="Tripulación por Rango"/>
                         </properties>
                       </component>
                     </children>
@@ -536,7 +536,7 @@
                               <actionCommand value=""/>
                               <maximumSize width="120" height="30"/>
                               <minimumSize width="120" height="30"/>
-                              <preferredSize width="120" height="30"/>
+                              <preferredSize width="200" height="30"/>
                               <text value="Gráfico 1  "/>
                             </properties>
                           </component>
@@ -544,7 +544,7 @@
                             <constraints/>
                             <properties>
                               <actionCommand value=""/>
-                              <preferredSize width="120" height="30"/>
+                              <preferredSize width="200" height="30"/>
                               <text value="Gráfico 2"/>
                             </properties>
                           </component>
